; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_xdg_shell.c_handle_set_title.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_xdg_shell.c_handle_set_title.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_xdg_shell_view = type { %struct.sway_view }
%struct.sway_view = type { i32 }
%struct.wl_listener = type { i32 }

@set_title = common dso_local global i32 0, align 4
@xdg_shell_view = common dso_local global %struct.sway_xdg_shell_view* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @handle_set_title to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_set_title(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_xdg_shell_view*, align 8
  %6 = alloca %struct.sway_view*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %8 = load %struct.sway_xdg_shell_view*, %struct.sway_xdg_shell_view** %5, align 8
  %9 = ptrtoint %struct.sway_xdg_shell_view* %8 to i32
  %10 = load i32, i32* @set_title, align 4
  %11 = call %struct.sway_xdg_shell_view* @wl_container_of(%struct.wl_listener* %7, i32 %9, i32 %10)
  store %struct.sway_xdg_shell_view* %11, %struct.sway_xdg_shell_view** %5, align 8
  %12 = load %struct.sway_xdg_shell_view*, %struct.sway_xdg_shell_view** %5, align 8
  %13 = getelementptr inbounds %struct.sway_xdg_shell_view, %struct.sway_xdg_shell_view* %12, i32 0, i32 0
  store %struct.sway_view* %13, %struct.sway_view** %6, align 8
  %14 = load %struct.sway_view*, %struct.sway_view** %6, align 8
  %15 = call i32 @view_update_title(%struct.sway_view* %14, i32 0)
  %16 = load %struct.sway_view*, %struct.sway_view** %6, align 8
  %17 = call i32 @view_execute_criteria(%struct.sway_view* %16)
  ret void
}

declare dso_local %struct.sway_xdg_shell_view* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @view_update_title(%struct.sway_view*, i32) #1

declare dso_local i32 @view_execute_criteria(%struct.sway_view*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
